# Computer-system

./: CMakeLists.txt
app_structure/: data_base.json
app_structure/add_new_computer/: create_objects.h  monitor_create.h
app_structure/main_window/: events.h  main.cpp  main_objects.h  main_window.h  work_with_json.h
app_structure/other_func/: creating_computer.h
autorization/: authorization.h  autorization_objects.h  bd.txt
